Fix G1_FULL_GC without -XX:+PrintGCDetails being identified as VERBOSE_GC_OLD.